fix: remove flex-wrap - it is not specified in PSD

--- a/source/sass/blocks/footer-socials.scss
+++ b/source/sass/blocks/footer-socials.scss
@@ -4,7 +4,6 @@ $shaded-color: #dddfe0;
   background-color: transparent;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 40px;
 }
